force-app/main/default/objects/Invoice_Opportunity__c/fields/Map_Onboarded_Date__c.field-meta.xml
<CustomField>
    <fullName>Map_Onboarded_Date__c</fullName>
    <formula>Supplier_Buyer_Map__r.approval_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Map Onboarded Date</label>
    <type>Date</type>
</CustomField>