force-app/main/default/objects/Invoice_Opportunity__c/fields/Map_Onboarding_Stage__c.field-meta.xml
<CustomField>
    <fullName>Map_Onboarding_Stage__c</fullName>
    <formula>TEXT(Supplier_Buyer_Map__r.map_onboarding_stage__c)</formula>
    <label>Map Onboarding Stage</label>
    <type>Text</type>
</CustomField>