force-app/main/default/objects/Invoice_Opportunity__c/fields/Marketing_Push__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Push__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Push</label>
    <type>Checkbox</type>
</CustomField>