force-app/main/default/objects/Invoice_Opportunity__c/fields/Marketplace_product__c.field-meta.xml
<CustomField>
    <fullName>Marketplace_product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Choose the right Market place and Currency</inlineHelpText>
    <label>Marketplace product</label>
    <referenceTo>Marketplace__c</referenceTo>
    <relationshipLabel>Sales Opportunities</relationshipLabel>
    <relationshipName>Sales_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>