force-app/main/default/objects/Invoice_Opportunity__c/fields/Max_Increase_Risk_View__c.field-meta.xml
<CustomField>
    <fullName>Max_Increase_Risk_View__c</fullName>
    <label>Max Increase Risk View</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>