force-app/main/default/objects/Invoice_Opportunity__c/fields/Number_of_Day_Since_Termsheet_Signed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Day_Since_Termsheet_Signed__c</fullName>
    <formula>TODAY() -  Date_Term_sheet_Signedt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Day Since Termsheet Signed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>