force-app/main/default/objects/Invoice_Opportunity__c/fields/Offer_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Signature_Date__c</fullName>
    <label>Offer Signature Date</label>
    <type>Date</type>
</CustomField>