force-app/main/default/objects/Invoice_Opportunity__c/fields/OIP_Started__c.field-meta.xml
<CustomField>
    <fullName>OIP_Started__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>to check if the opportunity went trough onboarding</inlineHelpText>
    <label>OIP Started</label>
    <type>Checkbox</type>
</CustomField>