force-app/main/default/objects/Invoice_Opportunity__c/fields/Open_to_Use_e_BL__c.field-meta.xml
<CustomField>
    <fullName>Open_to_Use_e_BL__c</fullName>
    <inlineHelpText>Ask the customer if they are open to use E-BL for future Trade</inlineHelpText>
    <label>Open to Use e-BL ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Already using</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>