force-app/main/default/objects/Invoice_Opportunity__c/fields/Operation_Owner__c.field-meta.xml
<CustomField>
    <fullName>Operation_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who is following the Onboarding</inlineHelpText>
    <label>Operation Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>