force-app/main/default/objects/Invoice_Opportunity__c/fields/Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Status__c</fullName>
    <label>Opportunity Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pipeline</fullName>
                <default>true</default>
                <label>1-Pipeline</label>
            </value>
            <value>
                <fullName>OIP</fullName>
                <label>2-OIP</label>
            </value>
            <value>
                <fullName>Active</fullName>
                <label>3-Active</label>
            </value>
            <value>
                <fullName>Others</fullName>
                <label>5-Others</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <label>4-Inactive</label>
            </value>
            <value>
                <fullName>Dopped</fullName>
                <label>6-Dropped</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>