force-app/main/default/objects/Invoice_Opportunity__c/fields/Ops_Comments__c.field-meta.xml
<CustomField>
    <fullName>Ops_Comments__c</fullName>
    <label>Ops Comments</label>
    <type>TextArea</type>
</CustomField>