force-app/main/default/objects/Invoice_Opportunity__c/fields/Past_trade_docs__c.field-meta.xml
<CustomField>
    <fullName>Past_trade_docs__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick when Uploaded in Sale Force</inlineHelpText>
    <label>Past trade docs (SALES)</label>
    <type>Checkbox</type>
</CustomField>