force-app/main/default/objects/Invoice_Opportunity__c/fields/Percentage_of_Success__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Success__c</fullName>
    <label>Percentage of Success</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0%</fullName>
                <default>true</default>
                <label>0%</label>
            </value>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>75%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
            <value>
                <fullName>90%</fullName>
                <isActive>false</isActive>
                <label>90%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>