force-app/main/default/objects/Invoice_Opportunity__c/fields/Planned_CC__c.field-meta.xml
<CustomField>
    <fullName>Planned_CC__c</fullName>
    <formula>DATETIMEVALUE(
TEXT(YEAR( Planned_Date_for_CC__c ))&amp;&quot;-&quot;&amp;
TEXT(MONTH( Planned_Date_for_CC__c ))&amp;&quot;-&quot;&amp;
TEXT(DAY( Planned_Date_for_CC__c )) &amp;&quot; &quot;&amp; 
&quot;07:00:00&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned CC</label>
    <type>DateTime</type>
</CustomField>