force-app/main/default/objects/Invoice_Opportunity__c/fields/Planned_Date_for_CC__c.field-meta.xml
<CustomField>
    <fullName>Planned_Date_for_CC__c</fullName>
    <inlineHelpText>Post Map Creation</inlineHelpText>
    <label>Planned Date for CC</label>
    <type>Date</type>
</CustomField>