force-app/main/default/objects/Invoice_Opportunity__c/fields/Port_of_Destination__c.field-meta.xml
<CustomField>
    <fullName>Port_of_Destination__c</fullName>
    <label>Port of Destination</label>
    <type>TextArea</type>
</CustomField>