force-app/main/default/objects/Invoice_Opportunity__c/fields/Port_Of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Port_Of_Origin__c</fullName>
    <label>Port of Origin</label>
    <type>TextArea</type>
</CustomField>