force-app/main/default/objects/Invoice_Opportunity__c/fields/Priority_of_the_week__c.field-meta.xml
<CustomField>
    <fullName>Priority_of_the_week__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Priority of the week</label>
    <type>Checkbox</type>
</CustomField>