force-app/main/default/objects/Invoice_Opportunity__c/fields/Process_Status__c.field-meta.xml
<CustomField>
    <fullName>Process_Status__c</fullName>
    <label>Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting Credit Limit</fullName>
                <label>1-Waiting Credit Limit</label>
            </value>
            <value>
                <fullName>No Credit Limit</fullName>
                <label>2-No Credit Limit</label>
            </value>
            <value>
                <fullName>Credit Limit Obtained</fullName>
                <label>3-Credit Limit Obtained</label>
            </value>
            <value>
                <fullName>4- Term Sheet Sent</fullName>
                <label>4-Term Sheet Sent</label>
            </value>
            <value>
                <fullName>Term sheet Signed</fullName>
                <default>true</default>
                <label>5-Term sheet Signed</label>
            </value>
            <value>
                <fullName>Waiting for Documents</fullName>
                <label>6-Waiting for Trade Documents</label>
            </value>
            <value>
                <fullName>7-Legal : review Trade Doc</fullName>
            </value>
            <value>
                <fullName>8-Risk Supplier Call</fullName>
            </value>
            <value>
                <fullName>9-Risk Buyer Call</fullName>
            </value>
            <value>
                <fullName>10-Map Created</fullName>
            </value>
            <value>
                <fullName>Credit Committee Planned</fullName>
                <label>11-Credit Committee Planned</label>
            </value>
            <value>
                <fullName>Credit Committee Done</fullName>
                <label>12-Credit Committee Done</label>
            </value>
            <value>
                <fullName>Offer Signed</fullName>
                <label>13-Offer Signed</label>
            </value>
            <value>
                <fullName>Map Onboarded</fullName>
                <label>14-Map Onboarded</label>
            </value>
            <value>
                <fullName>Invoice submitted</fullName>
                <label>15-Invoice submitted</label>
            </value>
            <value>
                <fullName>20-Dropped</fullName>
            </value>
            <value>
                <fullName>BNL Signed</fullName>
                <isActive>false</isActive>
                <label>BNL Draft Sent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>