force-app/main/default/objects/Invoice_Opportunity__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Factoring</fullName>
            </value>
            <value>
                <fullName>Reverse Factoring</fullName>
            </value>
            <value>
                <fullName>IN-Transit</fullName>
            </value>
            <value>
                <fullName>SBLC</fullName>
            </value>
            <value>
                <fullName>EPBG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>