force-app/main/default/objects/Invoice_Opportunity__c/fields/Product_type__c.field-meta.xml
<CustomField>
    <fullName>Product_type__c</fullName>
    <label>Product type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Factoring</fullName>
                <default>true</default>
                <label>Factoring Insured</label>
            </value>
            <value>
                <fullName>Factoring Insured 100</fullName>
            </value>
            <value>
                <fullName>Factoring SBLC</fullName>
            </value>
            <value>
                <fullName>Factoring SBLC 100</fullName>
            </value>
            <value>
                <fullName>Supply Chain Finance</fullName>
                <label>Reverse Factoring Insured</label>
            </value>
            <value>
                <fullName>Reverse Factoring !00</fullName>
                <label>Reverse Factoring Insured 100</label>
            </value>
            <value>
                <fullName>Reverse Factoring SBLC</fullName>
            </value>
            <value>
                <fullName>Reverse Factoring 100 SBLC</fullName>
                <label>Reverse Factoring SBLC 100</label>
            </value>
            <value>
                <fullName>In transit</fullName>
                <label>In Transit Factoring</label>
            </value>
            <value>
                <fullName>In Transit Reverse Factoring</fullName>
            </value>
            <value>
                <fullName>In Transit Repo</fullName>
            </value>
            <value>
                <fullName>LC</fullName>
            </value>
            <value>
                <fullName>Buyer Lead</fullName>
                <isActive>false</isActive>
                <label>Buyer Led</label>
            </value>
            <value>
                <fullName>Buyer Lead SBLC</fullName>
                <isActive>false</isActive>
                <label>Buyer Led SBLC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>