force-app/main/default/objects/Invoice_Opportunity__c/fields/Prop_IPL_CL__c.field-meta.xml
<CustomField>
    <fullName>Prop_IPL_CL__c</fullName>
    <label>Prop IPL CL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>