force-app/main/default/objects/Invoice_Opportunity__c/fields/Reason_for_Deal_Dropped__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Deal_Dropped__c</fullName>
    <label>Reason for Deal Dropped</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weak/small supplier</fullName>
            </value>
            <value>
                <fullName>Buyer below min financial criteria</fullName>
            </value>
            <value>
                <fullName>Insufficient track record between supplier and buyer</fullName>
            </value>
            <value>
                <fullName>Lack of buyer financials</fullName>
            </value>
            <value>
                <fullName>Lack of buyer call</fullName>
            </value>
            <value>
                <fullName>Lack of buyer engagement (BC/BNL/NoA)</fullName>
            </value>
            <value>
                <fullName>Insufficient credit limit</fullName>
            </value>
            <value>
                <fullName>Uncompetitive pricing</fullName>
            </value>
            <value>
                <fullName>Unacceptable geographic location of buyer/seller</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>