force-app/main/default/objects/Invoice_Opportunity__c/fields/Remaining_Credit_Limit_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Credit_Limit_USD_Equiv__c</fullName>
    <formula>Supplier_Buyer_Map__r.Buyer__r.Credit_Limit_Remaining_usd_equiv__c</formula>
    <label>Remaining Credit Limit USD Equiv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>