force-app/main/default/objects/Invoice_Opportunity__c/fields/Risk_Comments__c.field-meta.xml
<CustomField>
    <fullName>Risk_Comments__c</fullName>
    <label>Risk Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>