force-app/main/default/objects/Invoice_Opportunity__c/fields/Risk_Owner__c.field-meta.xml
<CustomField>
    <fullName>Risk_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Risk Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>