force-app/main/default/objects/Invoice_Opportunity__c/fields/RISK_TASK__c.field-meta.xml
<CustomField>
    <fullName>RISK_TASK__c</fullName>
    <label>RISK TASK</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-Review Legal Comment fo Clarification Buyer/ Supplier Call</fullName>
                <label>1-Review Legal Comment for Clarification Buyer/ Supplier Call</label>
            </value>
            <value>
                <fullName>1.2-Supplier Call</fullName>
            </value>
            <value>
                <fullName>2-Buyer Call</fullName>
            </value>
            <value>
                <fullName>3-Plan CC</fullName>
            </value>
            <value>
                <fullName>4-Fill MAP</fullName>
            </value>
            <value>
                <fullName>5-Submit Map</fullName>
            </value>
            <value>
                <fullName>1-Supplier Call</fullName>
                <isActive>false</isActive>
                <label>1-Supplier Call</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>