force-app/main/default/objects/Invoice_Opportunity__c/fields/Sale_Owner_Upload__c.field-meta.xml
<CustomField>
    <fullName>Sale_Owner_Upload__c</fullName>
    <label>Sales Owner Upload</label>
    <length>50</length>
    <type>Text</type>
</CustomField>