force-app/main/default/objects/Invoice_Opportunity__c/fields/Sales_Comments__c.field-meta.xml
<CustomField>
    <fullName>Sales_Comments__c</fullName>
    <label>Sales Comments</label>
    <type>TextArea</type>
</CustomField>