force-app/main/default/objects/Invoice_Opportunity__c/fields/Sales_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sales_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>