force-app/main/default/objects/Invoice_Opportunity__c/fields/SALES_TASK__c.field-meta.xml
<CustomField>
    <fullName>SALES_TASK__c</fullName>
    <label>SALES TASK</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-Collect Trade Doc</fullName>
            </value>
            <value>
                <fullName>1.2 Collect Additional Doc following Legal Comments ( If Any)</fullName>
            </value>
            <value>
                <fullName>2-Organise Supplier Call</fullName>
            </value>
            <value>
                <fullName>3-Organise Buyer Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>