force-app/main/default/objects/Invoice_Opportunity__c/fields/SDR__c.field-meta.xml
<CustomField>
    <fullName>SDR__c</fullName>
    <label>SDR</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>