force-app/main/default/objects/Invoice_Opportunity__c/fields/Shipping_Line_Fret_Forwarder__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Line_Fret_Forwarder__c</fullName>
    <inlineHelpText>Name of the Carrier or Fret Forwarder for future trade</inlineHelpText>
    <label>Shipping Line/ Fret Forwarder  - Name</label>
    <type>TextArea</type>
</CustomField>