force-app/main/default/objects/Invoice_Opportunity__c/fields/Sucess__c.field-meta.xml
<CustomField>
    <fullName>Sucess__c</fullName>
    <formula>IF(  TEXT (Percentage_of_Success__c)=&quot;0%&quot;,0,
IF(  TEXT (Percentage_of_Success__c)=&quot;25%&quot;,25,
IF(  TEXT (Percentage_of_Success__c)=&quot;50%&quot;,50,
IF(  TEXT (Percentage_of_Success__c)=&quot;75%&quot;,75,
IF(  TEXT (Percentage_of_Success__c)=&quot;90%&quot;,90,
IF(  TEXT (Percentage_of_Success__c)=&quot;100%&quot;,100,0
))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>%Sucess</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>