force-app/main/default/objects/Invoice_Opportunity__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <formula>Supplier_Buyer_Map__r.Supplier__r.Name</formula>
    <label>Supplier</label>
    <type>Text</type>
</CustomField>