force-app/main/default/objects/Invoice_Opportunity__c/fields/Supplier_Buyer_Map__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Buyer_Map__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Supplier Buyer Map</label>
    <referenceTo>Supplier_Buyer_Map__c</referenceTo>
    <relationshipName>Invoice_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>