force-app/main/default/objects/Invoice_Opportunity__c/fields/Supplier_Buyer_Map_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Buyer_Map_Name__c</fullName>
    <formula>Supplier_Buyer_Map__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Buyer Map Name</label>
    <type>Text</type>
</CustomField>