force-app/main/default/objects/Invoice_Opportunity__c/fields/Supplier_Buyer_txt__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Buyer_txt__c</fullName>
    <formula>IF(Credit_Committee_Status__c =&quot;Approved&quot;,
 
IF ( Broker__c =False, &quot;CC Approved&quot;+ &quot; / &quot;+ Supplier_name__c + &quot; &quot; + &quot;Selling to&quot;+&quot; &quot;+Buyer_Name__c, &quot;CC Approved&quot;+ &quot; / &quot; +&quot;Via&quot;+&quot; / &quot;+  Agent_Account__r.Name +  Lead_Agent_Not_yet_Onboarded__r.Company  + &quot; / &quot;+ Supplier_name__c + &quot; &quot; + &quot;Selling to&quot;+&quot; &quot;+Buyer_Name__c),

IF ( Broker__c =False, Supplier_name__c + &quot; &quot; + &quot;Selling to&quot;+&quot; &quot;+Buyer_Name__c, &quot;Via&quot;+&quot; / &quot;+  Agent_Account__r.Name +  Lead_Agent_Not_yet_Onboarded__r.Company  + &quot; / &quot;+ Supplier_name__c + &quot; &quot; + &quot;Selling to&quot;+&quot; &quot;+Buyer_Name__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trade</label>
    <type>Text</type>
</CustomField>