force-app/main/default/objects/Invoice_Opportunity__c/fields/Supplier_call__c.field-meta.xml
<CustomField>
    <fullName>Supplier_call__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick when Supplier call done , can be tick by Risk as well</inlineHelpText>
    <label>Supplier call (SALES)</label>
    <type>Checkbox</type>
</CustomField>