force-app/main/default/objects/Invoice_Opportunity__c/fields/Supplier_Call_Planned_Date__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Call_Planned_Date__c</fullName>
    <label>Supplier Call Planned Date</label>
    <type>DateTime</type>
</CustomField>