force-app/main/default/objects/Invoice_Opportunity__c/fields/Supplier_Country__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Country__c</fullName>
    <label>Supplier Country</label>
    <length>25</length>
    <type>Text</type>
</CustomField>