force-app/main/default/objects/Invoice_Opportunity__c/fields/Supplier_Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Discount_Rate__c</fullName>
    <description>Supplier Discount rate from the Map</description>
    <formula>Supplier_Buyer_Map__r.Supplier_Discount_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Supplier Discount rate from the Map</inlineHelpText>
    <label>Supplier Discount Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>