force-app/main/default/objects/Invoice_Opportunity__c/fields/Supplier_Financials__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Financials__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick when uploaded in Sales Force</inlineHelpText>
    <label>Supplier Financials (SALES)</label>
    <type>Checkbox</type>
</CustomField>