force-app/main/default/objects/Invoice_Opportunity__c/fields/Supplier_Lead_Origin__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Lead_Origin__c</fullName>
    <formula>Lead_Name_Supplier__r.Lead_origin__c</formula>
    <label>Supplier Lead Origin</label>
    <type>Text</type>
</CustomField>