force-app/main/default/objects/Invoice_Opportunity__c/fields/Supplier_Onboarding_Stage__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Onboarding_Stage__c</fullName>
    <formula>Supplier_Buyer_Map__r.supplier_onboarding_stage__c</formula>
    <label>Supplier Onboarding Stage</label>
    <type>Text</type>
</CustomField>