force-app/main/default/objects/Invoice_Opportunity__c/fields/Temp_Supplier_name__c.field-meta.xml
<CustomField>
    <fullName>Temp_Supplier_name__c</fullName>
    <formula>Lead_Name__r.Potential_Supplier_s__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Temp Supplier name</label>
    <type>Text</type>
</CustomField>