force-app/main/default/objects/Invoice_Opportunity__c/fields/Top_of_the_Month__c.field-meta.xml
<CustomField>
    <fullName>Top_of_the_Month__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Priority Deal</label>
    <type>Checkbox</type>
</CustomField>