force-app/main/default/objects/Invoice_Opportunity__c/fields/Total_Finance_Value_All_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Finance_Value_All_Time__c</fullName>
    <formula>Supplier_Buyer_Map__r.Total_Financing_value_alltime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Finance Value All Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>