force-app/main/default/objects/Invoice_Opportunity__c/fields/Trade_Doc_Risk_Review__c.field-meta.xml
<CustomField>
    <fullName>Trade_Doc_Risk_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick when Review done and documented in Sales Force</inlineHelpText>
    <label>Trade Doc Risk Review (RISK)</label>
    <type>Checkbox</type>
</CustomField>