force-app/main/default/objects/Invoice_Opportunity__c/fields/Trade_Docs_Legal_Review__c.field-meta.xml
<CustomField>
    <fullName>Trade_Docs_Legal_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick when report is in Sales Force</inlineHelpText>
    <label>Trade Docs Legal Review (LEGAL)</label>
    <type>Checkbox</type>
</CustomField>