force-app/main/default/objects/Invoice_Opportunity__c/fields/Trade_History__c.field-meta.xml
<CustomField>
    <fullName>Trade_History__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Trade history when Deal are more than 1mUSD T his can be a spreadsheet or a download or any format</inlineHelpText>
    <label>12mo Track Record ( When relevant)</label>
    <type>Checkbox</type>
</CustomField>