force-app/main/default/objects/Invoice_Opportunity__c/fields/Transwap_Account_Required__c.field-meta.xml
<CustomField>
    <fullName>Transwap_Account_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transwap Account Required</label>
    <type>Checkbox</type>
</CustomField>