force-app/main/default/objects/Invoice_Opportunity__c/fields/TXT_status_opp__c.field-meta.xml
<CustomField>
    <fullName>TXT_status_opp__c</fullName>
    <formula>TEXT( Opportunity_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TXT status opp</label>
    <type>Text</type>
</CustomField>