force-app/main/default/objects/Invoice_Opportunity__c/fields/Underlying_Goods_or_Services__c.field-meta.xml
<CustomField>
    <fullName>Underlying_Goods_or_Services__c</fullName>
    <formula>Supplier_Buyer_Map__r.Good_or_Services_Offered__c</formula>
    <label>Underlying Goods or Services</label>
    <type>Text</type>
</CustomField>