force-app/main/default/objects/Invoice_Opportunity__c/fields/Unutilised_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unutilised_Amount__c</fullName>
    <label>Unutilised Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>